<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="br.com.infsolution.infbullet.ProfileActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/ibt_foto_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/nobody"
                    android:layout_gravity="center_horizontal"
                    android:onClick="selectImage"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_nome_user"
                    android:textSize="10pt"
                    />
                <EditText
                    android:id="@+id/edt_nome_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nome"
                    android:textSize="10pt"
                    android:textColor="@android:color/darker_gray"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_matricula"
                    android:textSize="10pt"
                    />
                <EditText
                    android:id="@+id/edt_matricula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_matricula"
                    android:textSize="10pt"
                    android:textColor="@android:color/darker_gray"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sesrie"
                    android:textSize="10pt"
                    />
                <EditText
                    android:id="@+id/edt_serie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_serie"
                    android:textSize="10pt"
                    android:textColor="@android:color/darker_gray"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_meta"
                    android:textSize="10pt"
                    />
                <EditText
                    android:id="@+id/edt_meta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_meta"
                    android:textSize="10pt"
                    android:textColor="@android:color/darker_gray"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cad_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/bt_cadastro"
                    android:onClick="newUser"
                    />
                <Button
                    android:id="@+id/bt_update_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/bt_atualizar"
                    android:onClick="updateUser"
                    />
                <Button
                    android:id="@+id/bt_delete_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_delete"
                    android:onClick="deleteUser"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
