<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="infsolution.com.br.infbullet.BimestreActivity">
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ListView
        android:id="@+id/list_bimestre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nome_bime"
                android:textSize="8pt"
                />
            <EditText
                android:id="@+id/edt_nome_bimestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_bimestre"/>
            <Button
                android:id="@+id/bt_add_bimestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_bimestre"
                android:onClick="newBimestre"
                />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>
