<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BulletinActivity">
    <TextView
        android:id="@+id/t_titulo"
        android:text="@string/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile"
                android:layout_marginTop="@dimen/activity_horizontal_margin"

                android:id="@+id/go_profile"
                android:onClick="goForProfile"
                />
            <ImageButton
                android:id="@+id/go_agenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/boletim"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/go_profile"
                android:onClick="goForAgenda"
                />
            <TextView
                android:id="@+id/txt_go_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/go_profile"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/txt_profile"/>
            <TextView
                android:id="@+id/txt_go_agenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/go_agenda"
                android:layout_toRightOf="@+id/txt_go_profile"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/txt_agenda"
                />


        </RelativeLayout>
    </ScrollView>
</LinearLayout>

